# simplifi-power-tools

./: .gitignore  PERFORMANCE_ANALYSIS.md  README.md  manifest.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yaml
messaging-app/backend/: .gitignore  pyproject.toml
messaging-app/backend/app/: main.py
messaging-app/frontend/: package-lock.json  package.json  tailwind.config.js
messaging-app/frontend/src/: App.tsx
messaging-app/frontend/src/components/ui/: button-group.tsx  checkbox.tsx  context-menu.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  item.tsx  kbd.tsx  menubar.tsx  popover.tsx  select.tsx  sidebar.tsx  toggle.tsx
scripts/: Other.js  calculator.html  content.js
src/: calculator.js  helperFunctions.js  index.js  inputDiscovery.js  math.js  powerToolApps.js  style.css  transactionModel.js
static/: manifest.json
